--- a/projects/curdtask/src/app/Components/project-edit/project-edit.component.html
+++ b/projects/curdtask/src/app/Components/project-edit/project-edit.component.html
@@ -43,10 +43,11 @@
                         required</span>
                 </div>
                 <div class="form-group mb-2 pt-5">
-                    <button class="btn  btn-dark btn-left text-ligth btn-sm mx-3"  routerLink="/home">Back to home</button>
+                    <button class="btn  btn-dark btn-left text-ligth btn-sm mx-3"  routerLink="/navbar/home">Back to home</button>
                     <button type="submit" class="btn btn-success btn-outline-warning text-ligth btn-sm ">Submite</button>
                 </div>
             </form>
         </div>
     </div>
+    
 </div>
